# Demo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile-shaders.bat  compile_commands.json  imgui.ini
.devcontainer/: Dockerfile  devcontainer.json
User data Default/: imgui.ini
shaders/: demo.frag  demo_3D.frag
src/: App.cpp  App.h  main.cpp
src/Debug/: DebugOptions.cpp  generate_debug_options.py
src/examples/: SerializationExample.h
